# mEvents

./: .gitignore  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt
locales/: events.en.yml  events.pl.yml  forms.en.yml  forms.pl.yml
sql/: create_form_with_questions.sql  event_users.sql  users_view.sql
sql/supabase_functions/: post_notification.ts
src/: beforeware.py  components.py  db.py  forms.py  generators.py  login.py  main.py  root.py  utils.py
src/components/: __init__.py  app_factory.py  components.py  headers.py  info.py  models.py  translations.py
src/models/: events.py  forms.py  meta.py
src/modules/: clues.py  contributions.py  discord.py  events.py  forms.py  headers.py  login.py  new_event.py  new_form.py  profile.py  pwa.py  responses.py  tickets.py
static/: app.js  manifest.json  pwa-prompt.js  service-worker.js
